# alt-ergo-fuzz

./: .gitignore  Makefile  README.md  TODO.md  alt-ergo-fuzz.opam  alt-ergo-lib.opam  alt-ergo-parsers.opam  alt-ergo.opam  altgr-ergo.opam  dune-project  kill_all.sh
aef/: AFL.ml  Commands.ml  README.md  TODO.md  afl.sh  afl_cached.sh  afl_cached_pm.sh  afl_fuzzing.ml  afl_pm.sh  aflf.sh  aflf_cached.sh  aflf_cached_pm.sh  aflf_pm.sh  ast.ml  ast.mli  cleanup.sh  common.ml  dune  extract_cache_last.ml  extract_cache_nsl.ml  foptions.ml  foptions.mli  fuzz.sh  generator.ml  generator.mli  init.sh  issue_creation.ml  kill_all.sh  main.ml  main_afl.ml  rename_cached.sh  rerun.ml  rerun_all.sh  rerun_all_cached.sh  rerun_one_cached.ml  smtlib2_tr.ml  smtlib2_tr.mli  solvers.ml  solvers.mli  tr_altergo.ml  (+8 more)
aef/example/: README.md
aef/example/crash_output/: crash_u_1_1625230239.500483.txt
aef/example/trfiles/: crash_u_1_1625230239.500483.ae  crash_u_1_1625230239.500483.smt2
examples/: dune  lib_usage.ml
non-regression/: config.sexp
non-regression/challenges/valid/: challenge-case-split-non-pred-booleans__KO.ae  challenge-cubic_root_1__OK.ae  challenge-cubic_root_2__OK.ae  challenge-explicit-records.ae  challenge_with_rational_division__KO.ae  testfile-arith_mult_interval003__KO.ae  testfile-arith_mult_interval004__KO.ae  testfile-arith_mult_interval005__KO.ae  testfile-aufnira-001.smt2
non-regression/invalid/adts/: adts-hidden-recursion.ae  bug-in-typing-destr+recursive-adt.ae  match_example_0.ae  mutually_recursive_5.ae  mutually_recursive_6.ae  record-defined-as-adt+projection.ae  simple_invalid.ae  typecheck_warning-unused-pattern.ae  useless-patterns-vars.ae
src/: Commands.ml  alt_ergo_fuzz.ml  ast.ml  ast.mli  common.ml  foptions.mli  generator.ml  generator.mli  smtlib2_tr.ml  solvers.ml  solvers.mli  tr_altergo.ml  utils.ml
src/lib/: dune
src/parsers/: dune  psmt2_to_alt_ergo.ml
test/fuzzing/: FUtils.ml  README.md  afl.sh  afl_cached.sh  afl_cached_pm.sh  afl_fuzzing.ml  afl_fuzzing_cached.ml  afl_pm.sh  aflf.sh  aflf_cached.sh  aflf_cached_pm.sh  aflf_pm.sh  ast.ml  dune  extract_cache_last.ml  extract_cache_nsl.ml  extract_cache_nth.ml  foptions.ml  gen_stngs.ml  generator.ml  generator.mli  issue_creation.ml  kill_all.sh  rename_cached.sh  rerun.ml  rerun_all_cached.ml  rerun_all_cached.sh  rerun_last_cached.ml  rerun_one_cached.ml  smtlib2_solver.ml  smtlib2_solver.mli  smtlib2_tr.ml  solver.ml  solver.mli  solvers.ml  to_input_format.ml  tr_altergo.ml  tr_altergo.mli  tr_smtlib2.ml  tr_smtlib2.mli  (+8 more)
(+837 files in other folders)
