;(executable
; (name afl_fuzzing)
; (public_name afl_fuzzing)
; (libraries alt-ergo-lib crowbar)
; (package alt-ergo-lib))

;(test
; (name afl_fuzzing)
; (libraries alt-ergo-lib crowbar)
; (instrumentation (backend bisect_ppx))
; )

(executables
 (names afl_fuzzing rerun)
 (public_names afl_fuzzing rerun)
 (libraries alt-ergo-lib crowbar core)
 (package alt-ergo-lib)
 (instrumentation (backend bisect_ppx))
)
