(executables
 (names afl_fuzzing rerun translate_and_write issue_creation)
 (public_names afl_fuzzing rerun translate_and_write issue_creation)
 (libraries alt-ergo-lib crowbar lwt lwt.unix git-cohttp git-cohttp-unix)
 (modules_without_implementation translater)
 (package alt-ergo-lib)
 ;(instrumentation (backend bisect_ppx))
)
